--- a/SWE402_data_mining_assignment.ipynb
+++ b/SWE402_data_mining_assignment.ipynb
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "baseDf.info() # print information about the dataframe\n",
+    "baseDf.info() # print information about the dataframe 1212\n",
     "# va1Df.info() # print information about the dataframe\n",
     "# va2Df.info() # print information about the dataframe\n",
     "# va3Df.info() # print information about the dataframe\n",
