--- a/data mining._assignment.ipynb
+++ b/data mining._assignment.ipynb
@@ -14,7 +14,8 @@
     "  <li>CST2004270 Ng Zhun Keat</li>\n",
     "  <li>SWE2009494 Cheng Xianran</li>\n",
     "  <li>SWE2009509 Lin Meiru</li>\n",
-    "</ul>"
+    "</ul>\n",
+    "<a id=\"top\"></a>"
    ]
   },
   {
@@ -23,28 +24,36 @@
    "source": [
     "## Table of Content\n",
     "\n",
-    "* 1. [Introduction](#1-Introduction)<br>\n",
-    "    * 1.1 [Importance of Fraud Detection]()\n",
-    "    * 1.2 [Objective]()\n",
-    "* 2. [Dataset Description and Reference](#2-dataset-description-and-reference)<br>\n",
-    "    * 2.1 [Introduction of the dataset](#21-introduction-of-the-dataset)\n",
-    "    * 2.2 [Dataset Source](#22-dataset-source) \n",
-    "    * 2.3 [Attribute Description]()\n",
-    "* 3. [Descriptive with Code](#3-descriptive-with-code) <br>\n",
-    "    * 3.1 [Dataset feature description](#31-dataset-feature-description)<br>\n",
-    "    * 3.2 [Preprocess the data](#32-preprocess-the-data)<br>\n",
-    "    * 3.3 [Data structure](#33-data-structure)<br>\n",
-    "    * 3.4 [Summary table](#34-summary-table)\n",
-    "    * 3.5 [Data visualization for showing data distribution](#35-data-visualization-for-showing-data-distribution)\n",
-    "* 4. [Challenges and Problems]()<br>\n",
-    "* 5. [Conclusion / Findings](#5-conclusion--findings)\n",
-    "* * [Reference]()"
+    "- 1. [Introduction](#1-introduction)<br>\n",
+    "    - 1.1 [Importance of Fraud Detection](#11)<br>\n",
+    "    - 1.2 [Objective](#12)<br>\n",
+    "- 2. [Dataset Description and Reference](#2)<br>\n",
+    "    - 2.1 [Introduction of the dataset](#21)<br>\n",
+    "    - 2.2 [Dataset Source](#22)<br>\n",
+    "    - 2.3 [Attribute Description](#23)<br>\n",
+    "- 3. [Descriptive with Code](#3) <br>\n",
+    "    - 3.1 [Explore Combined Data](#31)<br>\n",
+    "    - 3.2 [Preprocessing Combined Data](#32)<br>\n",
+    "    - 3.3 [Feature Engineering for Fraud Detection of Bank Account Applications](#33)<br>\n",
+    "    - 3.4 [Feature Selection for Fraud Detection of Bank Account Applications](#34)<br>\n",
+    "    - 3.5 [Tree-Based Machine Learning Algorithms for Fraud Detection of Bank Account Applications](#35)<br>\n",
+    "        - 3.5.1 [Fraud Detection Model Training Functions using Oversampling and Search CV](#351)<br>\n",
+    "        - 3.5.2 [Fraud Detection Model Testing Functions](#352)<br>\n",
+    "        - 3.5.3 [Check and final preprocessed data for training](#353)<br>\n",
+    "        - 3.5.4 [Choose Oversampler with CatBoost and 5:5 training and test dataset](#354)<br>\n",
+    "        - 3.5.5 [**LightGBM training and evaluation**](#355)<br>\n",
+    "        - 3.5.6 [**XGBoost training and evaluation**](#356)<br>\n",
+    "        - 3.5.7 [**Model Evaluation for Fraud Detection**](#357)\n",
+    "- 4. [Challenges and Problems]()<br>\n",
+    "- 5. [Conclusion / Findings](#5-conclusion--findings)<br>\n",
+    "- [Reference](#6)<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"1\"></a>\n",
     "# **1. Introduction**"
    ]
   },
@@ -52,7 +61,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1.1 Importance of Fraud Detection**"
+    "### **1.1 Importance of Fraud Detection**\n",
+    "<a id=\"11\"></a>"
    ]
   },
   {
@@ -75,7 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1.2 Objective**"
+    "### **1.2 Objective**\n",
+    "<a id=\"12\"></a>"
    ]
   },
   {
@@ -94,6 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"2\"></a>\n",
     "# **2. Dataset Description and Reference**"
    ]
   },
@@ -101,7 +113,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <b>2.1 Introduction of the dataset</b><a class=\"anchor\" id=\"21-introductio-of-dataset\"></a>"
+    "### <b>2.1 Introduction of the dataset</b><a class=\"anchor\" id=\"21-introductio-of-dataset\"></a>\n",
+    "<a id=\"21\"></a>"
    ]
   },
   {
@@ -135,7 +148,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.3 Attribute Description**"
+    "### **2.3 Attribute Description**\n",
+    "<a id=\"23\"></a>"
    ]
   },
   {
@@ -324,6 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"3\"></a>\n",
     "# **3. Descriptive with Code**"
    ]
   },
@@ -418,6 +433,8 @@
    "id": "7e516140",
    "metadata": {},
    "source": [
+    "<a id=\"31\"></a>\n",
+    "\n",
     "## 3.1. Explore Combined Data"
    ]
   },
@@ -1945,6 +1962,8 @@
    "id": "794c423c",
    "metadata": {},
    "source": [
+    "<a id=\"32\"></a>\n",
+    "\n",
     "## 3.2 Preprocessing Combined Data"
    ]
   },
@@ -4092,6 +4111,8 @@
    "id": "0d883c57",
    "metadata": {},
    "source": [
+    "<a id=\"33\"></a>\n",
+    "\n",
     "## 3.3. Feature Engineering for Fraud Detection of Bank Account Applications"
    ]
   },
@@ -4797,6 +4818,8 @@
    "id": "9519c6f4",
    "metadata": {},
    "source": [
+    "<a id=\"34\"></a>\n",
+    "\n",
     "## 3.4. Feature Selection for Fraud Detection of Bank Account Applications"
    ]
   },
@@ -5554,6 +5577,8 @@
    "id": "a064f1a8",
    "metadata": {},
    "source": [
+    "<a id=\"35\"></a>\n",
+    "\n",
     "## 3.5. Tree-Based Machine Learning Algorithms for Fraud Detection of Bank Account Applications"
    ]
   },
@@ -5579,6 +5604,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"351\"></a>\n",
+    "\n",
     "### 3.5.1 Fraud Detection Model Training Functions using Oversampling and Search CV"
    ]
   },
@@ -5776,6 +5803,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"352\"></a>\n",
+    "\n",
     "### 3.5.2 Fraud Detection Model Testing Functions"
    ]
   },
@@ -6087,6 +6116,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"353\"></a>\n",
+    "\n",
     "### 3.5.3 Check and final preprocessed data for training"
    ]
   },
@@ -7177,6 +7208,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"354\"></a>\n",
+    "\n",
     "### 3.5.4 Choose Oversampler with CatBoost and `5:5` training and test dataset"
    ]
   },
@@ -7582,6 +7615,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"355\"></a>\n",
+    "\n",
     "### 3.5.5 LightGBM training and evaluation"
    ]
   },
@@ -8372,6 +8407,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"356\"></a>\n",
+    "\n",
     "### 3.5.6 XGBoost training and evaluation"
    ]
   },
@@ -9081,6 +9118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"357\"></a>\n",
+    "\n",
     "### 3.5.7 Model Evaluation for Fraud Detection"
    ]
   },
@@ -9937,6 +9976,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"4\"></a>\n",
+    "\n",
     "# **4. Challenges and Problems**"
    ]
   },
@@ -9958,6 +9999,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"5\"></a>\n",
+    "\n",
     "# **5. Conclusion / Findings**"
    ]
   },
@@ -9970,6 +10013,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"6\"></a>\n",
+    "\n",
     "# **Reference**"
    ]
   },
@@ -9982,6 +10027,11 @@
     "    <li>Matthewmcnulty. (2023, May 16). Bank-account-fraud. Kaggle. https://www.kaggle.com/code/matthewmcnulty/bank-account-fraud</li>\n",
     "</ul>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
